deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chatbot
  labels:
    app: chatbot
spec:
  to:
    kind: Service
    name: chatbot
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
